--- a/index.html
+++ b/index.html
@@ -1309,7 +1309,7 @@
                 <button onclick="navigateTo('profile')" class="w-full bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-4 rounded-lg shadow-md transition duration-300">
                     Save Changes
                 </button>
-    <script>
+    <script src="main.js?v=169928282818">
         // Global variables
         let currentPage = 'loading';
         let loadingProgress = 0;
